fix: alignfull update

--- a/assets/src/css/brisko.css
+++ b/assets/src/css/brisko.css
@@ -101,15 +101,19 @@ pre {
     grid-gap: 1.5em;
 }
 
-.alignwide,
-.alignfull {
-    margin-left: calc(50% - 49.4vw);
-    margin-right: calc(50% - 49.4vw);
+.alignwide, .alignfull {
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(50% - 50vw);
     max-width: 100vw;
+    width: 100vw;
+    overflow: hidden;
 }
 
-.alignfull img {
-    width: 100vw;
+.alignwide {
+    max-width: var(--wp--style--global--wide-size);
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /*--------------------------------------------------------------
